--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,1 @@
-springBootVersion=3.0.5
-springDependencyManagementVersion=1.1.0
-axionReleasePluginVersion=1.14.4
-jgivenVersion=1.2.4
-archUnitVersion=1.0.1
-jsonSchemaValidatorVersion=0.1.2
-jsonUnitVersion=2.36.1
-prometheusVersion=1.10.4
-caffeineVersion=3.1.5
-errorProneVersion=2.18.0
-sonarqubeVersion=3.1.1
-logbackJsonVersion=0.1.5
-janinoVersion=3.1.9
-testLoggerVersion=3.2.0
+log4jVersion = 2.8.1
